cmake_minimum_required(VERSION 3.10)
 
# Locate GTest
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
 
# Link runTests with what we want to test and the GTest and pthread library
add_executable(RunningTest Test_Object.cpp)
target_link_libraries(RunningTest ${GTEST_LIBRARIES} pthread)